--- a/src/index.html
+++ b/src/index.html
@@ -192,7 +192,7 @@
         }
 
         a {
-            color: #fff;
+            color: #ffffff;
             text-decoration: underline;
             transition: color 0.3s ease;
         }
@@ -224,5 +224,6 @@
             </div>
         </div>
     </div>
+    
 </body>
 </html>
